# ttspiper

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  go.mod  go.sum
.github/workflows/: deploy.yml
ci/protobuilder/: Dockerfile
cmd/ttspiper/: config.go  logger.go  main.go
config/: ttspiper.json
cpp_src/: CMakeLists.txt
cpp_src/include/ttspiperlib/: ttspiperlib.h
cpp_src/src/: piper.cpp  piper.hpp  ttspiperlib.cpp
internal/api/grpc/: server_tts.go
internal/api/grpc/proto/: buf.gen.yaml  buf.yaml
internal/api/grpc/proto/voicedock/core/common/v1/: audio.proto
internal/api/grpc/proto/voicedock/core/tts/v1/: tts.proto  tts_api.proto
internal/api/grpc/proto/voicedock/extensions/tts/v1/: tts.proto  tts_api.proto
internal/config/: confreader.go  datareader.go  downloader.go  service.go  voiceconf.go  voicedata.go  voicespec.go
